--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
     compile('org.springframework.session:spring-session-jdbc')
+    compile('org.mariadb.jdbc:mariadb-java-client')
     testCompile group: 'junit', name: 'junit', version: '4.13'
     testCompile('org.springframework.security:spring-security-test')
     annotationProcessor 'org.projectlombok:lombok'
